# moose

./: .env.example  .gitignore  Dockerfile  Dockerfile.demo  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
examples/: streamlit_app.py  submit_ner.py  submit_tabular.py
examples/moose_ui/: api.py  config.py  metadata.py  render.py  samples.py  state.py  submit.py
examples/pages/: 1_Text.py  2_Tables.py  3_Privacy.py  4_Jobs.py  5_Developer.py
scripts/: build_dpv_artifacts.py  build_gdpr_artifacts.py  build_schemaorg_artifacts.py  fetch_dpv.py  organize_data_assets.py
src/moose/: __init__.py  config.py  cpa.py  legal.py  ner.py  pipelines.py  privacy.py  prob.py  prompts.py  schema.py  validate.py
src/moose/data/: assets_index.json  colprops_types.json  dpv_full.json  sti_types.json  vocabularies.json  vocabularies.json.bak
src/moose/data/dpv/: concept_ancestors.json  concept_parents.json  manifest.json  module_index.json  schemes.json
src/moose/data/legal/gdprtext/: concept_ancestors.json  concept_parents.json  concepts.json  manifest.json  module_index.json  recitals.json
src/moose/data/pipelines/: privacy_profiles.json
src/moose/data/policies/: gdpr_basic.json
src/moose/data/schemaorg/: class_ancestors.json  class_parents.json  classes.json  manifest.json  properties.json  property_index.json
src/moose/llm/: __init__.py  base.py  deepinfra.py  deepseek.py  factory.py  ollama.py  openrouter.py
src/moose_api/: __init__.py  main.py  queue.py
src/moose_api/static/: docs.css
tests/: test_prob.py  test_validate.py
(+20 files in other folders)
