[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moose"
version = "0.1.0"
description = "Moose: async NER and tabular typing prototype"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Moose"}
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
  "aiofiles>=23.2.1",
  "ollama>=0.3.0",
  "motor>=3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]
demo = [
  "streamlit>=1.33.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moose_api = ["static/*"]
moose = [
  "data/**/*.json",
  "data/**/*.jsonld",
  "data/**/*.txt"
]

[tool.pytest.ini_options]
addopts = "-q"
